# neural_network

./: .gitignore  README.md  REFERENCE.md  requirements.txt
camera/: bundle_adj.py  triangulation.py  v4l2camera.py
classification_RPS/torch_grayimg/: codetest.py  dataset_import.py
classification_catdog/: codetest.py  dataset_download.txt  dataset_import.py  eval.py  notebook.ipynb
classification_cnn_cifar/: class_cnn_cifar10.ipynb  notebook.ipynb  train.py
classification_fashionmnist/: eval.py  notebook.ipynb  train.py
classification_mnist/: class_FashionMNIST.ipynb  class_MNIST.ipynb
classification_mnist/save_model/: fashion_model.pth
classification_numbermnist/: notebook.ipynb  train.py
classification_numbermnist_tf/: dataset_import.py  eval.py  model.py  notebook.ipynb  train.py
detection_tutorial/: 1_basic_yolo.py  2_webcam.py  3_webcam_video_yolo.py
detection_tutorial/prj_car_counter/: main.py
detection_tutorial/prj_people_counter/: support.py
grasp_poses/: gp_normal_parallel.py  gp_single_fixed_orientation.py  normal_parallel.py  single_fixed_orientation.py
img_processing/: read_img_method.py
opencv_torch/: opencv_torch.ipynb
pcd_proc/: open3d_processing.py
pcd_processing/: merge_harvest.py  merge_pcd.py  open3d_processing.py  pcd_to_copsim.py  tftest.py
projects/ball_trajectory/: data_import.py  seperation_time_fit.py
projects/c_arm_xray/: triangulation.py
projects/pattern_detection/: charuco_detection.py  charuco_pose_estimation.py
projects/thesis_exp/: display.py  merge_harvest.py  merge_pcd.py
projects/yolo_detection/: yolo_centroid.py  yolo_mask.py  (+1 more)
torch_ros/: CMakeLists.txt  package.xml
torch_ros/src/: main.cpp
torch_tutorial_transferlearning/: view.py
training_notebook/: README.md
utils/: fileio.py
utils/legacy_code/torchlib_cpp/p1_install/: CMakeLists.txt  main.cpp
(+11 files in other folders)
